--- a/index.html
+++ b/index.html
@@ -1,321 +1,113 @@
-
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Vascular Boards Quiz</title>
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="theme-color" content="#0a0a0a" />
-  <link rel="manifest" href="manifest.webmanifest" />
-  <link rel="apple-touch-icon" href="icon-192.png" />
-  <style>
-    :root{--bg:#0a0a0a;--fg:#f5f5f5;--mut:#bdbdbd;--card:#111;--accent:#3b82f6;--ok:#16a34a;--bad:#dc2626}
-    *{box-sizing:border-box} html,body{margin:0;height:100%;background:var(--bg);color:var(--fg);font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
-    .wrap{max-width:680px;margin:0 auto;padding:16px 16px 112px}
-    .top{position:sticky;top:0;background:rgba(10,10,10,.7);backdrop-filter:blur(8px);border-bottom:1px solid #222;padding:12px 16px;margin:-16px -16px 12px}
-    .row{display:flex;gap:8px;align-items:center} .sp{flex:1}
-    .btn{appearance:none;border:1px solid #2a2a2a;background:#151515;color:var(--fg);padding:12px 14px;border-radius:14px;font-size:16px}
-    .btn:active{transform:scale(.98)} .btn.pri{background:var(--accent);border-color:var(--accent);color:white}
-    .meter{height:8px;border-radius:999px;background:#1f2937;overflow:hidden} .meter>i{display:block;height:100%;background:var(--accent)}
-    .card{background:var(--card);border:1px solid #222;border-radius:18px;padding:16px}
-    .q{font-weight:600;line-height:1.4}
-    ..opt{
-  display:block;width:100%;text-align:left;margin-top:8px;
-  padding:14px;border:1px solid #2a2a2a;border-radius:14px;
-  background:#121212;font-size:16px;
-  color:#f5f5f5;            /* <-- add this line */
-}
-.opt.ok{  border-color:#14532d;background:#052e14; color:#ffffff; }
-.opt.bad{ border-color:#3f0c0c;background:#2a0909; color:#ffffff; }
-
-    .expl{margin-top:12px;border-radius:12px;padding:12px;border:1px solid #234;background:#0b1420}
-    .foot{position:fixed;left:0;right:0;bottom:0;border-top:1px solid #222;background:rgba(10,10,10,.9);backdrop-filter:blur(8px);padding:8px}
-    .foot .row{max-width:680px;margin:0 auto}
-    small{color:var(--mut)} a{color:#93c5fd}
-    .toggle{border-radius:999px;padding:6px 10px;border:1px solid #2a2a2a;background:#151515}
-    .pill{font-size:12px;border:1px solid #2a2a2a;border-radius:999px;padding:6px 10px;background:#151515}
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Vascular Boards – JG</title>
+<link rel="manifest" href="./manifest.webmanifest" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<link rel="apple-touch-icon" href="./icon-192.png" />
+<style>
+  :root{--bg:#000;--fg:#fff;--card:#0b0b0b;--border:#242424;--ok:#166534;--bad:#7f1d1d;--muted:#9aa0a6}
+  html,body{margin:0;background:var(--bg);color:var(--fg);font-family:-apple-system,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+  .shell{max-width:760px;margin:70px auto 120px;padding:16px}
+  .top{position:fixed;inset:0 0 auto 0;background:#111;color:#fff;padding:10px 14px;display:flex;gap:10px;align-items:center;justify-content:space-between;border-bottom:1px solid var(--border)}
+  .q{font-size:1.1rem;margin:12px 0 8px}
+  .btn{display:block;width:100%;text-align:left;margin:8px 0;padding:12px 14px;border:1px solid var(--border);border-radius:14px;background:var(--card);color:var(--fg);font-size:16px}
+  .ok{background:#0b3d20;border-color:var(--ok)}
+  .bad{background:#4b0f0f;border-color:var(--bad)}
+  .panel{padding:12px;border:1px solid var(--border);border-radius:12px;margin-top:10px}
+  .nav{display:flex;gap:8px;margin-top:12px}
+  a{color:#7db3ff}
+  .pill{font-size:12px;color:var(--muted)}
+</style>
 </head>
-<!-- DEBUG: prove we’re loading the 60-item file -->
+<body>
+  <div class="top">
+    <div id="pos">Q 1/60</div>
+    <div id="score" class="pill">0 correct</div>
+  </div>
+  <div class="shell">
+    <div id="app">Loading…</div>
+  </div>
+
 <script>
 (async function(){
-  const tag = 'v9-' + Date.now(); // hard cache-bust every load
-  const res = await fetch('./questions.json?' + tag, { cache: 'no-store' });
-  const data = await res.json();
-  console.log('[DEBUG] questions loaded:', data.length);
-  // Show a banner on the page so you can see it works without opening the console
-  let b = document.getElementById('debug-banner');
-  if (!b) {
-    b = document.createElement('div');
-    b.id = 'debug-banner';
-    b.style.position='fixed'; b.style.bottom='8px'; b.style.left='8px';
-    b.style.padding='8px 12px'; b.style.borderRadius='10px';
-    b.style.background='#0b5'; b.style.color='#fff'; b.style.font='14px/1.2 -apple-system,Helvetica,Arial,sans-serif';
-    b.style.zIndex='9999';
-    document.body.appendChild(b);
+  // Always fetch fresh questions (bust caches)
+  const QV = 'v10-' + Date.now();
+  const res = await fetch('./questions.json?' + QV, { cache: 'no-store' });
+  const QUESTIONS = await res.json();
+
+  // --- Minimal, reliable renderer ---
+  const app = document.getElementById('app');
+  const pos = document.getElementById('pos');
+  const scoreEl = document.getElementById('score');
+  let i = 0;
+  const answers = Array(QUESTIONS.length).fill(null);
+
+  function render(){
+    const q = QUESTIONS[i];
+    pos.textContent = `Q ${i+1}/${QUESTIONS.length}`;
+    scoreEl.textContent = `${answers.filter(a=>a?.correct).length} correct`;
+
+    app.innerHTML = `
+      <div class="q">${q.Question}</div>
+      <div id="opts"></div>
+      <div id="explain" class="panel"></div>
+      <div class="nav">
+        <button id="prev" class="btn">◀️ Prev</button>
+        <button id="next" class="btn">Next ▶️</button>
+      </div>
+    `;
+
+    const opts = document.getElementById('opts');
+    ['A','B','C','D'].forEach(k=>{
+      const b = document.createElement('button');
+      b.className = 'btn';
+      b.textContent = `${k}) ${q[k] || ''}`;
+      b.onclick = ()=>{
+        const correct = (k === q.Correct);
+        answers[i] = { choice:k, correct };
+        showExplain();
+      };
+      opts.appendChild(b);
+    });
+
+    function showExplain(){
+      const chosen = answers[i]?.choice;
+      [...opts.children].forEach(btn=>{
+        const letter = btn.textContent.slice(0,1);
+        btn.classList.remove('ok','bad');
+        if (letter === q.Correct) btn.classList.add('ok');
+        if (chosen && letter === chosen && letter !== q.Correct) btn.classList.add('bad');
+      });
+      const x = document.getElementById('explain');
+      if (answers[i]) {
+        x.innerHTML = `
+          <div style="margin-bottom:6px">${answers[i].correct ? '✅ Correct' : '❌ Incorrect'}</div>
+          <div style="margin-bottom:6px">${q.Explanation || ''}</div>
+          ${q["Reference URL"] ? `<a href="${q["Reference URL"]}" target="_blank" rel="noreferrer">${q["Reference Title"]||'Reference'}</a>` : ''}
+        `;
+      } else {
+        x.innerHTML = `<span class="pill">Choose an answer to see explanation & reference.</span>`;
+      }
+    }
+    showExplain();
+
+    document.getElementById('prev').onclick = ()=>{ i=Math.max(0,i-1); render(); };
+    document.getElementById('next').onclick = ()=>{ i=Math.min(QUESTIONS.length-1,i+1); render(); };
   }
-  b.textContent = 'Loaded questions: ' + data.length;
+
+  render();
+
+  // Register SW (safe even if already present)
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('./sw.js').catch(()=>{});
+    });
+  }
 })();
 </script>
- 
-  <body>
-  <div class="wrap">
-    <div class="top">
-      <div class="row">
-        <strong>Vascular Boards — Practice</strong>
-        <div class="sp"></div>
-        <span id="stats" class="pill">0 / 0 • 0% • Session 0m</span>
-        <button class="toggle" id="themeBtn" title="Toggle theme">☾</button>
-      </div>
-      <div class="row" style="margin-top:8px">
-        <div>Q <span id="qnum">1</span>/<span id="qtot">—</span></div>
-        <div class="sp"></div>
-        <div id="timer">Timer off</div>
-      </div>
-      <div class="meter" style="margin-top:8px"><i id="meter" style="width:0%"></i></div>
-    </div>
-
-    <div class="row" style="gap:8px;margin:8px 0 12px; flex-wrap:wrap">
-      <button class="btn pri" id="newBtn">New Session (Shuffle)</button>
-      <button class="btn" id="timerBtn">Start Timer</button>
-      <button class="btn" id="refsBtn">Show Refs</button>
-      <button class="btn" id="reviewBtn">Review Incorrect</button>
-      <button class="btn" id="exportBtn">Export CSV</button>
-      <button class="btn" id="resetBtn">Reset Progress</button>
-    </div>
-
-    <div class="card" id="qcard">
-      <div class="q" id="qtext">App is ready. Questions will load here…</div>
-      <div id="opts"></div>
-      <div class="expl" id="expl" hidden>
-        <div id="expText"></div>
-        <div id="refWrap" style="margin-top:6px" hidden>
-          <small>Reference: <a id="refLink" target="_blank" rel="noreferrer noopener"></a></small>
-        </div>
-      </div>
-      <div class="row" style="margin-top:12px">
-        <button class="btn" id="prevBtn">◀ Prev</button>
-        <div class="sp"></div>
-        <button class="btn" id="nextBtn">Next ▶</button>
-      </div>
-    </div>
-
-    <div style="margin:16px 0 112px">
-      <small>Score: <b id="score">0</b> / <b id="tot">0</b> • <span id="answered">0 answered</span></small><br/>
-      <small>To add or edit questions later, just replace <code>questions.json</code> in this repo.</small>
-    </div>
-  </div>
-
-  <div class="foot">
-    <div class="row">
-      <button class="btn" id="fprev">Prev</button>
-      <button class="btn" id="frand">Random</button>
-      <button class="btn" id="fnext">Next</button>
-    </div>
-  </div>
-
- <script>
-  let QUESTIONS = [];
-  fetch('./questions.json?v=2025-08-12', { cache: 'no-store' })
-    .then(r => r.json())
-    .then(data => {
-      QUESTIONS = data;
-      console.log('Loaded questions:', QUESTIONS.length);  // should log 60
-      startQuiz(QUESTIONS);                                // <-- UNCOMMENTED
-    })
-    .catch(err => console.error('Failed to load questions.json', err));
-</script>
-
-
-
-    // Register service worker
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('./sw.js').catch(function(){});
-      });
-    }
-
-    // State with localStorage
-    const lsGet = (k, v) => JSON.parse(localStorage.getItem(k) || "null") ?? v;
-    const lsSet = (k, v) => localStorage.setItem(k, JSON.stringify(v));
-
-    let qs = []; let order=[]; let idx=0; let answers=[];
-    let showRefs=false; let startTs=Date.now(); let timerOn=false; let dark=true;
-    let reviewMode=false;
-
-    // Elements
-    const qnum = document.getElementById('qnum');
-    const qtot = document.getElementById('qtot');
-    const meter = document.getElementById('meter');
-    const qtext = document.getElementById('qtext');
-    const optsDiv = document.getElementById('opts');
-    const expl = document.getElementById('expl');
-    const expText = document.getElementById('expText');
-    const refWrap = document.getElementById('refWrap');
-    const refLink = document.getElementById('refLink');
-    const scoreEl = document.getElementById('score');
-    const totEl = document.getElementById('tot');
-    const ansEl = document.getElementById('answered');
-    const timerEl = document.getElementById('timer');
-    const themeBtn = document.getElementById('themeBtn');
-    const statsEl = document.getElementById('stats');
-
-    const newBtn=document.getElementById('newBtn');
-    const timerBtn=document.getElementById('timerBtn');
-    const refsBtn=document.getElementById('refsBtn');
-    const prevBtn=document.getElementById('prevBtn');
-    const nextBtn=document.getElementById('nextBtn');
-    const fprev=document.getElementById('fprev');
-    const fnext=document.getElementById('fnext');
-    const frand=document.getElementById('frand');
-    const reviewBtn=document.getElementById('reviewBtn');
-    const exportBtn=document.getElementById('exportBtn');
-    const resetBtn=document.getElementById('resetBtn');
-
-    function init(){
-      // load/persist
-      qs = lsGet('sf_qs', QUESTIONS);
-      order = lsGet('sf_order', qs.map((_,i)=>i));
-      idx = lsGet('sf_idx', 0);
-      answers = lsGet('sf_answers', qs.map(()=>({choice:null,correct:null,ts:Date.now()})));
-      showRefs = !!lsGet('sf_showRefs', false);
-      startTs = lsGet('sf_start', Date.now());
-      timerOn = !!lsGet('sf_timer', false);
-      dark = !!lsGet('sf_dark', true);
-      reviewMode = !!lsGet('sf_review', false);
-      applyTheme();
-      qtot.textContent = qs.length; totEl.textContent = qs.length;
-      render();
-    }
-
-    // Theme
-    function applyTheme() {
-      document.body.style.background = dark ? '#0a0a0a' : '#ffffff';
-      document.body.style.color = dark ? '#f5f5f5' : '#111111';
-      themeBtn.textContent = dark ? '☾' : '☀';
-      lsSet('sf_dark', dark);
-    }
-    themeBtn.onclick = ()=>{ dark = !dark; applyTheme(); };
-
-    function shuffle(arr){for(let i=arr.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}return arr}
-    function reset(sh){
-      answers = qs.map(()=>({choice:null,correct:null,ts:Date.now()}));
-      lsSet('sf_answers',answers); idx=0; lsSet('sf_idx',idx);
-      startTs=Date.now(); lsSet('sf_start',startTs);
-      order = sh? shuffle(qs.map((_,i)=>i)): qs.map((_,i)=>i);
-      lsSet('sf_order',order); reviewMode=false; lsSet('sf_review',reviewMode);
-      render();
-    }
-
-    function render(){
-      if(!qs.length){ qtext.textContent='No questions found in questions.json'; return;}
-
-      // if review mode, filter order to only incorrect
-      let effectiveOrder = order;
-      if(reviewMode){
-        effectiveOrder = order.filter(i => answers[i]?.correct === false);
-        if(!effectiveOrder.length){
-          reviewMode = false; lsSet('sf_review', false);
-          effectiveOrder = order;
-        }
-        idx = Math.min(idx, effectiveOrder.length-1);
-      }
-
-      const total = qs.length;
-      const answeredCount = answers.filter(x=>x.correct!==null).length;
-      const correctCount = answers.filter(x=>x.correct===true).length;
-      const pct = total? Math.round(correctCount/total*100) : 0;
-      statsEl.textContent = `${correctCount} / ${total} • ${pct}% • ${formatMinutes((Date.now()-startTs)/60000)}m`;
-
-      const qi = effectiveOrder[idx] ?? 0;
-      const q = qs[qi];
-      qnum.textContent = (effectiveOrder.indexOf(qi)+1) || (idx+1);
-      qtot.textContent = reviewMode ? effectiveOrder.length : total;
-      totEl.textContent = total;
-      meter.style.width = (((effectiveOrder.indexOf(qi)+1) || (idx+1))/ (reviewMode ? effectiveOrder.length : total) * 100).toFixed(1)+'%';
-      qtext.textContent = q["Question"];
-      optsDiv.innerHTML = '';
-      const letters=['A','B','C','D'];
-      letters.forEach(L=>{
-        const b=document.createElement('button'); b.className='opt';
-        b.textContent = L+') '+q[L];
-        const a = answers[qi];
-        if(a.correct!==null){
-          const picked = a.choice===L;
-          const isRight = q["Correct"]===L;
-          if(isRight) b.classList.add('ok');
-          if(picked&&!isRight) b.classList.add('bad');
-        }
-        b.onclick=()=>pick(L, qi);
-        optsDiv.appendChild(b);
-      });
-      // feedback
-      const a = answers[qi];
-      if(a.correct!==null){
-        expl.hidden=false;
-        expText.textContent = q["Explanation"]||'';
-        if(showRefs && q["Reference URL"]){
-          refWrap.hidden=false; refLink.href=q["Reference URL"]; refLink.textContent = q["Reference Title"]||q["Reference URL"];
-        } else { refWrap.hidden=true; }
-      } else { expl.hidden=true; }
-      // score & persist
-      const sc = answers.filter(x=>x.correct===true).length;
-      const an = answers.filter(x=>x.correct!==null).length;
-      scoreEl.textContent = sc; ansEl.textContent = an + ' answered';
-      lsSet('sf_qs',qs); lsSet('sf_order',order); lsSet('sf_idx',idx); lsSet('sf_answers',answers); lsSet('sf_showRefs',showRefs); lsSet('sf_timer',timerOn); lsSet('sf_review',reviewMode);
-    }
-
-    function pick(L, qi){
-      const q = qs[qi];
-      const correct = q["Correct"]===L;
-      answers[qi] = {choice:L, correct, ts: Date.now()};
-      render();
-    }
-
-    function next(){ idx = idx+1; render(); }
-    function prev(){ idx = Math.max(idx-1, 0); render(); }
-    function formatMinutes(m){ return Math.floor(m); }
-
-    newBtn.onclick = ()=> reset(true);
-    nextBtn.onclick = next; prevBtn.onclick = prev; fnext.onclick = next; fprev.onclick = prev;
-    frand.onclick=()=>{ idx = Math.floor(Math.random()*(reviewMode? order.filter(i=>answers[i]?.correct===false).length : qs.length)); render(); };
-    refsBtn.onclick = ()=>{ showRefs=!showRefs; refsBtn.textContent = showRefs? 'Hide Refs':'Show Refs'; render(); };
-    reviewBtn.onclick = ()=>{ reviewMode = !reviewMode; lsSet('sf_review', reviewMode); idx = 0; render(); };
-    resetBtn.onclick = ()=>{ if(confirm('Reset local progress?')){ localStorage.removeItem('sf_answers'); answers = qs.map(()=>({choice:null,correct:null,ts:Date.now()})); render(); } };
-
-    // Timer
-    let tInt=null; function tick(){ const s = Math.floor((Date.now()-startTs)/1000); timerEl.textContent = s? Math.floor(s/60)+'m '+(s%60)+'s':'0s'; }
-    timerBtn.onclick = ()=>{
-      if(tInt){ clearInterval(tInt); tInt=null; timerOn=false; timerEl.textContent='Timer off'; lsSet('sf_timer',timerOn); return; }
-      startTs = Date.now(); lsSet('sf_start',startTs); timerOn=true; lsSet('sf_timer',timerOn); tick(); tInt=setInterval(tick,1000);
-    };
-    if(timerOn){ tick(); tInt=setInterval(tick,1000);} else { timerEl.textContent='Timer off'; }
-
-    // Export CSV
-    exportBtn.onclick = ()=>{
-      const rows = [['Question','YourChoice','CorrectChoice','WasCorrect','Timestamp']];
-      answers.forEach((a,i)=>{
-        const q = qs[i];
-        rows.push([
-          (q?.Question||'').replaceAll('"','""'),
-          a?.choice ?? '',
-          q?.Correct ?? '',
-          a?.correct === null ? '' : (a?.correct ? '1' : '0'),
-          a?.ts ?? ''
-        ]);
-      });
-      const csv = rows.map(r => r.map(x => `"${x}"`).join(',')).join('\n');
-      const blob = new Blob([csv], {type: 'text/csv'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = 'vascular-quiz-results.csv'; a.click();
-      URL.revokeObjectURL(url);
-    };
-
-    // Initial placeholders
-    document.getElementById('qtext').textContent = 'App is ready. Questions will load here…';
-  </script>
 </body>
 </html>
